<resources>
    <string name="app_name">Ryanair test task</string>
    <string name="teens">Teens:</string>
    <string name="children">Children:</string>
    <string name="adults">Adults:</string>
    <string name="search_flight">search flight</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="fetching_data">Fetching data</string>
    <string name="flight_number">Flight number:</string>
    <string name="duration">Duration:</string>
    <string name="fare">Fare:</string>
    <string name="fare_class">Fare class</string>
    <string name="nothing_find_according_this_params">Nothing find according this params</string>
</resources>