<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="dev.jetlaunch.ryanairtesttask.viewmodels.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/tv_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{vm.origin.code}"
            android:maxLines="1"
            android:hint="@string/origin"
            app:layout_constraintEnd_toStartOf="@+id/tv_destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/tv_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{vm.destination.code}"
            android:maxLines="1"
            android:hint="@string/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_origin"
            app:layout_constraintTop_toTopOf="parent" />

        <DatePicker
            android:id="@+id/departure_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:padding="0dp"
            date="@={vm.departureDate}"
            android:spinnersShown="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_origin" />

        <TextView
            android:id="@+id/tv_adults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/adults"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/cv_adults"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cv_adults" />

        <dev.jetlaunch.ryanairtesttask.view.CounterView
            android:id="@+id/cv_adults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            number="@={vm.adults}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/departure_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/teens"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/cv_teens"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_teens" />

        <dev.jetlaunch.ryanairtesttask.view.CounterView
            android:id="@+id/cv_teens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            number="@={vm.teens}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_adults" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/children"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/cv_children"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_children" />

        <dev.jetlaunch.ryanairtesttask.view.CounterView
            android:id="@+id/cv_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            number="@={vm.children}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_teens" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_btn"
            android:drawableEnd="@drawable/ic_plane"
            android:drawablePadding="10dp"
            android:onClick="@{() -> vm.searchTrips() }"
            android:text="@string/search_flight"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_children" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>